manifests/03-auth_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-deploy
  template:
    metadata:
      labels:
        app: auth-deploy
    spec:
      containers:
      - name: auth-deploy
        image: stepigor/ot8auth:arm
        ports:
        - containerPort: 8080
