manifests/06-orders_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-deploy
  template:
    metadata:
      labels:
        app: orders-deploy
    spec:
      containers:
      - name: orders-deploy
        image: stepigor/ot8orders:latest
        ports:
        - containerPort: 8080
