manifests/09-courier_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courier-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courier-deploy
  template:
    metadata:
      labels:
        app: courier-deploy
    spec:
      containers:
      - name: courier-deploy
        image: stepigor/ot8courier:arm
        ports:
        - containerPort: 8080
