manifests/12-goods_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goods-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goods-deploy
  template:
    metadata:
      labels:
        app: goods-deploy
    spec:
      containers:
      - name: goods-deploy
        image: stepigor/ot8goods:latest
        ports:
        - containerPort: 8080
