manifests/15-billing_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-deploy
  template:
    metadata:
      labels:
        app: billing-deploy
    spec:
      containers:
      - name: billing-deploy
        image: stepigor/ot8billing:latest
        ports:
        - containerPort: 8080
