manifests/04-auth_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: auth-deploy
