manifests/07-orders_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: orders-deploy
