manifests/10-courier_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: courier-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: courier-deploy
