manifests/13-goods_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goods-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: goods-deploy
