manifests/16-billing_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: billing-deploy
